--- a/WebBanSua/appsettings.json
+++ b/WebBanSua/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "QLCuaHangSuaConnect": "Server=DUNG10NGON\\SQLEXPRESS;Database=CuaHangBanSua;Integrated Security=true;"
-
+    "QLCuaHangSuaConnect": "Server=TranDucHai;Database=CuaHangBanSua;Integrated Security=true;"
+    //Server=DUNG10NGON\\SQLEXPRESS;Database=CuaHangBanSua;Integrated Security=true;
+    //workstation id=CuaHangBanSua.mssql.somee.com;packet size=4096;user id=dung266200_SQLLogin_1;pwd=88x74q1ilt;data source=CuaHangBanSua.mssql.somee.com;persist security info=False;initial catalog=CuaHangBanSua
   },
   "Logging": {
     "LogLevel": {
